--- a/BankSystem.API/appsettings.json
+++ b/BankSystem.API/appsettings.json
@@ -1,10 +1,13 @@
-{
+﻿{
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=bankSystemDb2023;Username=postgres;Password=postgres"
+  },  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
