Добавил спецификации, почнил тесты

--- a/BankSystem.App.Tests/BankSystem.App.Tests.csproj
+++ b/BankSystem.App.Tests/BankSystem.App.Tests.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BankSystem.API\BankSystem.API.csproj" />
     <ProjectReference Include="..\BankSystem.App\BankSystem.App.csproj" />
   </ItemGroup>
 
