--- a/BankSystem.App/BankSystem.App.csproj
+++ b/BankSystem.App/BankSystem.App.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Dex.Specifications" Version="1.1.15" />
+    <PackageReference Include="FluentValidation" Version="11.5.0" />
   </ItemGroup>
 
   <ItemGroup>
