Добавлен пример работы с RabbitMQ

--- a/BankSystem.API/appsettings.json
+++ b/BankSystem.API/appsettings.json
@@ -2,12 +2,18 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=bankSystemDb2023;Username=postgres;Password=postgres"
-  },  
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "RabbitOptions": {
+    "HostName": "localhost",
+    "ExchangeName": "BankExchange",
+    "QueueName": "BankQueue",
+    "RoutingKey": "BankRoutingKey"
   }
 }
