Добавлена работа с MassTransit

--- a/Notification/Notification.csproj
+++ b/Notification/Notification.csproj
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <None Update="configuration.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
