Добавлен пример по Quartz

--- a/BankSystem.API/appsettings.json
+++ b/BankSystem.API/appsettings.json
@@ -15,5 +15,10 @@
     "ExchangeName": "BankExchange",
     "QueueName": "BankQueue",
     "RoutingKey": "BankRoutingKey"
+  },
+  "Quartz": {
+    "SignContractReminderJob": {
+      "Cron": "0 20 16 ? * * *"      
+    }
   }
 }
