--- a/BankSystem.App/BankSystem.App.csproj
+++ b/BankSystem.App/BankSystem.App.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Dex.Specifications" Version="1.1.15" />
     <PackageReference Include="FluentValidation" Version="11.5.0" />
+    <PackageReference Include="Quartz" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
